@@ -35,6 +35,7 @@ Unreleased Version 2.2.2-pre
  * Fix: Don't crash on invalid certificates when connecting via WebSocket. Thanks IZUHU for reporting.
  * Feature: Set user agent header when connecting via WebSocket using the client. Thanks Meru for suggesting.
  * Feature: Allow adding a "w" query parameter to session URLs to connect via WebSocket instead. Thanks IZUHU for suggesting.
+ * Fix: Remember whether a host was connected to via WebSocket by adding the "w" query parameter to it.
 
 2025-02-12 Version 2.2.2-beta.5
  * Feature: Color circle dock with gamut masks, available through View > Docks > Color Circle. Similar to Krita's Artistic Color Selector and MyPaint's HSV/HCY Wheel.
